# corpuscle

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bitmap-buffer.h  image-io.c  image-io.h  main.c  program-arguments.h  ray-casting.h  vec.h
test/: CMakeLists.txt  tests.c
